force-app/main/default/objects/Application_Budget_Category__c/Application_Budget_Category__c.object-meta.xml
<CustomObject>
    <label>Application Budget Category</label>
    <nameField>
        <label>Application Budget Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>