force-app/main/default/objects/Application_Budget_Category__c/fields/Application_Budget__c.field-meta.xml
<CustomField>
    <fullName>Application_Budget__c</fullName>
    <label>Application Budget</label>
    <referenceTo>Application_Budget__c</referenceTo>
    <relationshipLabel>Application Budget Categories</relationshipLabel>
    <relationshipName>Application_Budget_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>