force-app/main/default/objects/Application_Budget_Category__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Application_Budget_Detail__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Application_Budget_Detail__c.Application_Budget_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>